fixed width overflow

--- a/style.css
+++ b/style.css
@@ -19,7 +19,8 @@ body {
   font-size: 16px;
   color: hsl(0, 0%, 0%);
   font-weight: 400;
-  /* width: 100%; */
+  overflow-x: hidden;
+  width: 100%;
 }
 
 .publication-head{
@@ -792,7 +793,7 @@ display: flex;
     padding: 0px;
     gap: 32px;
   
-    position: relative;
+    position: fixed;
     width: 1100px;
     height: 20px;
     left: 738px;
